@@ -9,7 +9,7 @@ rglclock_SOURCES = main.cc glclock.cc options.cc about.cc \
 module.cc simple.c gdkgl.c
 rglclock_LDADD = ${GL_LIBS} ${GTK_LIBS}
 
-noinst_HEADERS = glclock.h module.h simple.h gdkgl.h
+noinst_HEADERS = glclock.h module.h simple.h autowidget.h gdkgl.h
 pkgdata_DATA = gtkrc
 
 man_MANS = rglclock.1
